veille devops devsecops lean

--- a/pages/alternance.html
+++ b/pages/alternance.html
@@ -31,6 +31,9 @@
                 <img src="../asset/courrier.svg" alt="logo maarch">
             </h1>
             <div class="about_alt">
+                <h1>
+                    Présentation de l'entreprise Maarch
+                </h1>
                 <p>
                     Fondée en 2004 par Jean-Louis ERCOLANI, Maarch est une entreprise française spécialisée dans la GED 
                     (Gestion Électronique de Documents) et la GEC (Gestion Électronique de Courriers). 
@@ -75,9 +78,9 @@
                             ainsi que d'un accompagnement dans les migrations, les mises à jour et le paramétrage de l'application.
                         </li>
                     </ul>
-                    <h3 class="technique">
+                    <h4>
                         Support technique
-                    </h3>
+                    </h4>
                     <p>
                         À mon arrivée chez Maarch, j'ai été affecté au service de support utilisateur de l'application Maarch Courrier. J'ai eu des interactions quotidiennes 
                         avec les clients on-premise, SaaS et partenaires. Mes responsabilités techniques consistaient à recueillir le maximum d'informations sur les problèmes 
@@ -89,9 +92,9 @@
                         manquantes. Nous récupérions également les logs d'erreurs du navigateur s'il y en avait. Si les anomalies dépassaient le périmètre du support 
                         de niveau 1 (N1), la demande était transférée au support de niveau 2 (N2).
                     </p>
-                    <h3 class="fonctionnel">
+                    <h4>
                         Support fonctionnel
-                    </h3>
+                    </h4>
                     <p>
                         Concernant la partie fonctionnelle, nous étions également en communication directe avec le client, soit par le biais des tickets via le logiciel 
                         de ticketing Forge, soit directement par téléphone. Notre responsabilité était de répondre aux questions du client et de l'assister dans la 
@@ -117,9 +120,9 @@
                         que les développeurs puissent les comprendre. Une fois le backlog géré, nous nous consacrons aux cérémonies pour discuter et évaluer les tickets, 
                         ainsi que pour préparer les sprints à venir.
                     </p>
-                    <h3 class="backlog">
+                    <h4>
                         Gestion du backlog
-                    </h3>
+                    </h4>
                     <p>
                         L'une de mes principales responsabilités au sein de l'équipe R&D consiste à gérer le backlog, ce qui implique de qualifier les tickets soumis par 
                         les équipes de support N1 et N2. Cela comprend la compréhension du sujet, sa reformulation, et sa priorisation pour les cérémonies à venir.
@@ -143,9 +146,9 @@
                         </ul>
 
                     </p>
-                    <h3 class="us">
+                    <h4>
                         User story
-                    </h3>
+                    </h4>
                     <p>
                         En tant qu'assistante du Product Owner, ma responsabilité consiste à reformuler les User Stories pour l'élaboration de nouvelles fonctionnalités. 
                         L'objectif de cette reformulation est de clarifier explicitement les besoins du client.
@@ -155,9 +158,9 @@
                         Après avoir analysé les besoins, nous devons établir un devis et une proposition de développement pour le client. Si le client approuve à la 
                         fois le développement et le budget proposé, le ticket peut alors être lancé en développement.                    
                     </p>
-                    <h3 class="bugs">
+                    <h4>
                         Création des tickets de bugs
-                    </h3>
+                    </h4>
                     <p>
                         Une autre responsabilité du Product Owner est la création de tickets de bugs. Dans ce scénario, lorsqu'il s'agit d'un ticket de bug, 
                         je dois suivre un modèle spécifique pour décrire l'anomalie rencontré. Tout d'abord, je dois préciser le contexte du bug, puis je dois tester le 
@@ -165,9 +168,9 @@
                         et inclure toutes les informations techniques pertinentes dans le ticket (fichiers logs, dump de la bdd, captures d'écran 
                         de la console du navigateur, etc.).                    
                     </p>
-                    <h3 class="ceremonies">
+                    <h4>
                         Organisation et pilotage des cérémonies Scrum
-                    </h3>
+                    </h4>
                     <p>
                         L'une des responsabilités cruciales du Product Owner réside dans la préparation et la direction des cérémonies Scrum. Ces événements spécifiques 
                         constituent le cadre du processus de développement Agile selon la méthodologie Scrum, offrant des opportunités de collaboration, de planification, 
@@ -199,9 +202,9 @@
                             </li>
                         </ul>
                     </p>
-                    <h3 class="doc">
+                    <h4>
                         Mise à jour de la documentation
-                    </h3>
+                    </h4>
                     <p>
                         En qualité d'assistante Product Owner, je suis également responsable de la mise à jour de la documentation en ligne. Lors des sorties de 
                         nouvelles versions, je révise les fonctionnalités obsolètes et j'incorpore les nouvelles fonctionnalités. Cependant, la gestion de la 
