--- a/pages/veille.html
+++ b/pages/veille.html
@@ -64,8 +64,9 @@
                     Les anciennes méthodologies, souvent les premières à être introduites sur le marché, sont progressivement 
                     délaissées en raison de leur rigidité et du manque de communication entre les équipes. Elles cèdent la place 
                     à de nouvelles méthodologies plus agiles qui offrent une meilleure flexibilité et favorisent une collaboration 
-                    plus étroite entre les membres de l'équipe de développement.
-                    <br><br>
+                    plus étroite entre les membres de l'équipe de développement. Je vais vous présenter les méthodes les plus connues
+                    dans le secteurs du développement.
+                    <br><br><br><br>
                 </p>
                 <h4>
                     Méthode en cascade
@@ -135,10 +136,12 @@
                     Méthodologies actuelles
                 </h1>
                 <p>
-                    La méthode agile est une approche itérative et incrémentale du développement logiciel qui met l'accent sur la 
+                    La <b>méthode Agile</b> est la méthode la plus courante actuellement au sein des entreprises de développement, c'est 
+                    une approche itérative et incrémentale du développement logiciel qui met l'accent sur la 
                     flexibilité, la collaboration, et la livraison continue de logiciels fonctionnels et de valeur pour les clients. 
                     Contrairement aux méthodologies traditionnelles telles que la cascade, qui suivent un plan rigide et prédictif, 
-                    les méthodes agiles s'adaptent aux changements et aux évolutions tout au long du projet.
+                    les méthodes agiles s'adaptent aux changements et aux évolutions tout au long du projet. Il existe plusieurs méthode
+                    Agile, j'ai décicé de vous présenter celles qui sont le plus répandus dans le monde du travail à ce jour.
                     <br><br>
                 </p>
                 <h4>
@@ -180,6 +183,21 @@
                     Méthode Extreme Programming
                 </h4>
                 <p>
+                    Et pour finir la <b>méthode eXtreme Programming (XP)</b> se caractérise par sa réactivité aux changements des besoins du client, sa 
+                    collaboration d'équipe, la priorisation de la qualité du travail et des tests précoces. Elle repose sur cinq valeurs 
+                    clés : la communication, la simplicité, le feedback, le respect et le courage. Cette approche privilégie des itérations 
+                    courtes et rapides, un fort investissement du client, une intégration continue et des livraisons fréquentes pour 
+                    assurer une validation rapide des étapes du projet. Toutefois, sa réussite dépend fortement de la discipline, de la 
+                    communication et de l'implication du client. En favorisant la simplicité et un rythme constant, XP encourage une 
+                    collaboration étroite entre managers, équipe projet et client, tout en assurant un contrôle continu de la qualité.
+                    <br><br>
+                    Les avantages de la méthode XP incluent une adaptation rapide aux changements, une forte implication du client tout au 
+                    long du processus, une qualité accrue grâce à des tests continus, et une collaboration renforcée au sein de l'équipe. 
+                    Cependant, la complexité de sa mise en œuvre, le besoin d'une discipline rigoureuse et le risque d'une dépendance 
+                    excessive à la communication peuvent constituer des défis. Néanmoins, les bénéfices de XP se traduisent par une 
+                    productivité accrue, des délais réduits, une culture d'apprentissage continue et une capacité d'adaptation rapide aux 
+                    changements, contribuant ainsi à maintenir la pertinence du produit développé sur le long terme.
+                </p>
             </div>
         </section>
 
@@ -188,6 +206,61 @@
                 <h1>
                     Méthodologies emergentes
                 </h1>
+                <p>
+                    Actuellement, de nouvelles méthodes émergent dans le domaine du développement logiciel, visant à optimiser 
+                    les processus pour réduire les délais de livraison, diminuer les coûts de développement et accroître 
+                    l'automatisation des tests. Parmi ces approches, le DevOps est largement connu et adopté, tandis qu'une 
+                    évolution de celui-ci, le DevSecOps, se concentre sur la sécurité en plus de l'efficacité opérationnelle. 
+                    En parallèle, la méthode Lean gagne également en popularité pour son approche axée sur l'élimination des 
+                    gaspillages et l'amélioration continue des processus.
+                    <br><br>
+                </p>
+                <h4>
+                    Méthodes DevOps et DevSecOps
+                </h4>
+                <p>
+                    La méthodologie DevOps est une approche de développement logiciel qui favorise une collaboration étroite entre 
+                    les équipes de développement et les équipes opérationnelles. En intégrant des pratiques telles que l'automatisation 
+                    des processus, la résolution rapide des problèmes et la mise en œuvre régulière de nouvelles fonctionnalités, 
+                    DevOps vise à accroître l'efficacité et la satisfaction client. Toutefois, sa mise en place peut être difficile, 
+                    nécessitant des changements culturels et organisationnels significatifs.
+                    <br>
+                    Opter pour la méthodologie DevOps présente l'avantage de favoriser une collaboration efficace entre les équipes de 
+                    développement et les équipes opérationnelles, ce qui permet d'accélérer le déploiement des applications, de réduire 
+                    les délais de livraison et d'améliorer la qualité des logiciels. En outre, DevOps offre une meilleure réactivité aux 
+                    besoins du marché et une augmentation de la satisfaction client grâce à des mises à jour fréquentes et des cycles de 
+                    développement rapides.
+                    <br><br>
+                    De son côté, DevSecOps étend les principes de DevOps en y intégrant la sécurité dès les premières étapes du processus 
+                    de développement. En anticipant les besoins de sécurité dès la phase de conception et en automatisant les mesures de 
+                    sécurité tout au long du cycle de vie du logiciel, DevSecOps vise à renforcer la sécurité et à réduire les risques liés 
+                    aux cybermenaces. Cette approche offre une vision globale de la sécurité informatique, mais nécessite une adoption proactive 
+                    des mesures de sécurité et une collaboration étroite entre les équipes de développement, de sécurité et opérationnelles.
+                    <br>
+                    D'un autre côté, choisir DevSecOps permet d'intégrer la sécurité dès le début du processus de développement, ce qui réduit 
+                    les risques liés aux failles de sécurité et aux cyberattaques. En anticipant et en automatisant les mesures de sécurité, 
+                    DevSecOps garantit une meilleure protection des données et une réduction des vulnérabilités, ce qui peut être crucial dans 
+                    un environnement informatique de plus en plus exposé aux menaces. Ainsi, l'adoption de DevSecOps permet de renforcer la 
+                    confiance des utilisateurs dans les systèmes et les applications développés.
+                </p>
+                <h4>
+                    Méthode Lean
+                </h4>
+                <p>
+                    Cette approche de développement logiciel s'inspire des principes et des pratiques de la conception éthique. 
+                    La <b>méthodologie Lean</b> repose sur sept principes fondamentaux : éliminer le gaspillage, favoriser 
+                    l'apprentissage, différer la prise de décision, garantir une livraison rapide, responsabiliser les 
+                    développeurs et intégrer le processus. Elle se concentre sur l'exécution de tâches individuelles à un 
+                    moment donné, évitant ainsi le multitâche. La méthode Lean vise à atteindre des objectifs de qualité 
+                    produit, de délais de livraison, de productivité et de réduction des coûts grâce à une amélioration 
+                    continue et à la réduction des gaspillages.
+                    <br><br>
+                    Les avantages de la méthode Lean incluent une meilleure qualité de produit, des délais de livraison plus courts, 
+                    une productivité accrue et une réduction des coûts. Cependant, sa mise en œuvre peut être complexe et nécessite 
+                    un changement culturel au sein de l'organisation. Par ailleurs, la nécessité de se concentrer sur des tâches 
+                    individuelles peut parfois entraîner une certaine rigidité dans le processus. Néanmoins, la méthode Lean offre 
+                    une approche structurée pour améliorer constamment les processus et optimiser les résultats.
+                </p>
             </div>
         </section>
 
@@ -196,6 +269,9 @@
                 <h1>
                     Test Driven Development & Domain Driven Design
                 </h1>
+                <p>
+                    
+                </p>
             </div>
 
         </section>
@@ -205,6 +281,16 @@
                 <h1>
                     Intelligence Artificielle & Cloud-native
                 </h1>
+                <h4>
+                    Intelligence Artificielle
+                </h4>
+                <p>
+                </p>
+                <h4>
+                    Cloud-Native
+                </h4>
+                <p>
+                </p>
             </div>
         </section>
         
