--- a/pages/fiche_E5.html
+++ b/pages/fiche_E5.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <title>Portfolio</title>
 </head>
-<body>
-    <header class="light-mode">
-        <button aria-label="light mode" class="button_mode">
-            <span class="material-symbols-outlined">
-                light_mode
-            </span>
-            </button>
-    
+<body id="body" class="light-mode">
+    <header>    
         <nav class="navbar">
+            <!-- button dark/light mode -->
+            <button id="themeToggleBtn">
+                <span class="material-symbols-outlined">
+                    light_mode
+                </span>
+            </button>
             <a href="../index.html" id="home" class="button">Accueil</a>
             <a href="../index.html#about" id="btn_about" class="button">A propos</a>
             <a href="../index.html#skills" id="btn_skills" class="button">Compétences</a>
@@ -246,5 +246,6 @@
         </p>
     </footer>
     <script src="../js/app.js"></script>
+    <script src="../js/light-mode.js"></script>
 </body>
 </html>
